[project]
name = "anything-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.0.1",
    "langchain>=0.3.24",
    "langchain-community>=0.3.22",
    "langchain-experimental>=0.3.4",
    "langchain-groq>=0.3.2",
]
